# tumodori

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-08-desktop-notification-alarm.md
docs/specs/: 2026-04-08-desktop-notification-alarm.md
src/: app.rs  big_font.rs  config.rs  main.rs  notification.rs  timer.rs  ui.rs
