[package]
name = "tumodori"
version = "0.1.0"
edition = "2024"
description = "A terminal-based Pomodoro timer built with Ratatui"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
notify-rust = "4.14.0"
ratatui = "0.30.0"
